--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <p> <i class='bx bxs-phone-call'></i> +358 40 7484946</p>
                 </div>
                 <div class="col-auto social-icons">
-                    <a href="https://www.instagram.com/joacim"><i class='bx bxl-instagram'></i></a>
+                    <a href="https://www.instagram.com/joacimronn"><i class='bx bxl-instagram'></i></a>
                     <a href="https://www.linkedin.com/in/joacim-r%C3%B6nn-8ab2251/"><i class='bx bxl-linkedin'></i></a>
                 </div>
             </div>
@@ -78,12 +78,12 @@
                         Macit, Windowsit ja Linuxit. Vahvuuksiani ovat asiakaslähtöinen ajattelutapa ja periksiantamaton
                         ongelmanratkaisu. Tykkään oppia uutta, se toimii minulle motivaattorina.
                     </p>
-                    <a href="/assets/CV.pdf" target="_blank" class="btn btn-brand btn-lg text-dark"><i
+                    <a href="/assets/CV.pdf" target="_blank" class="btn btn-brand btn-lg text-dark mb-3"><i
                             class="bi bi-file-earmark-pdf"></i> CV.pdf</a>
-                    <a href="/assets/Mina.pdf" target="_blank" class="btn btn-brand mx-3 btn-lg text-dark"><i
+                    <a href="/assets/Mina.pdf" target="_blank" class="btn btn-brand mx-3 btn-lg text-dark mb-3"><i
                             class="bi bi-file-earmark-pdf"></i> Minä.pdf</a>
                 </div>
-                <img class="img-fluid w-50 d-none d-sm-block" src="img/comp_guy2.png" alt="">
+                <img class="img-fluid w-50" src="img/comp_guy2.png" alt="">
             </div>
         </div>
     </section>
@@ -110,7 +110,7 @@
                                 <img src="img/specialist.png" alt="">
                                 <div class="ms-4">
                                     <h5>Järjestelmäasiantuntija</h5>
-                                    <p>Järjestelmäasiantuntijan töitä olen tehnyt jo vuodesta 1999.</p>
+                                    <p>Järjestelmäasiantuntijan töitä olen tehnyt jo vuodesta 1999</p>
                                 </div>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                                 <img src="img/books.png" alt="">
                                 <div class="ms-4">
                                     <h5>Oppiminen</h5>
-                                    <p>Uuden oppiminen toimii minulle motivaattorina.</p>
+                                    <p>Ongelmat ovat uuden oppimista, ne toimivat minulle motivaattorina</p>
                                 </div>
                             </div>
                         </div>
@@ -137,15 +137,15 @@
         <div class="container">
             <div class="row text-center justify-content-center gy-4">
                 <div class="col-lg-2 col-sm-6">
-                    <h1 class="display-4">100<i class="bi bi-plus"></i></h1>
+                    <h1 class="display-4"><i class="bi bi-globe"></i> 100+</h1>
                     <p class="mb-0">www-sivustoa</p>
                 </div>
                 <div class="col-lg-2 col-sm-6">
-                    <h1 class="display-4">20<i class="bi bi-hourglass-split"></i></h1>
-                    <p class="mb-0">Järjestelmäasiantunijana</p>
+                    <h1 class="display-4"><i class="bi bi-hourglass-split"></i> 20v.</h1>
+                    <p class="mb-0">Järjestelmäasiantuntijana</p>
                 </div>
                 <div class="col-lg-2 col-sm-6">
-                    <h1 class="display-4">3 <i class="bi bi-translate"></i></h1>
+                    <h1 class="display-4"><i class="bi bi-translate"></i> 3</h1>
                     <p class="mb-0">Suomi, Ruotsi ja Englanti</p>
                 </div>
                 <!-- <div class="col-lg-2 col-sm-6">
@@ -164,9 +164,7 @@
                     <div class="intro">
                         <h6>Historia</h6>
                         <h1>Työkokemus / opiskelu</h1>
-                        <p class="mx-auto">Hei tässä minun työhistoria sekä opiskeluni. Keltaisella taustalla olevat,
-                            ovat
-                            yrityksiä joille teen edelleen keikkaluontoisesti töitä.</p>
+                        <p class="mx-auto">Hei, tässä minun työhistoria sekä opiskeluni. Keltaisella taustalla olevat, ovat yrityksiä joille teen edelleen keikkaluontoisesti töitä.</p>
                     </div>
                 </div>
             </div>
@@ -175,10 +173,7 @@
                     <div class="service bg-success">
                         <img src="/img/megaman.jpg" class="rounded-circle shadow mb-3" alt="Megaman">
                         <h5>Megaman Oy</h5>
-                        <p class="text-dark">IT-huollon vastuuhenkilö, asiakaspalvelu, puhelintuki, etätuki,
-                            tietokonehuolto, komponenttien vaihto, virusten siivous, koneiden
-                            vuosihuolto. Myös yrityksen graafinen suunnittelu, www-sivut (myös
-                            asiakkaiden) ja mainokset.
+                        <p class="text-dark">IT-huollon vastuuhenkilö, asiakaspalvelu, puhelintuki, etätuki, tietokonehuolto, komponenttien vaihto, virusten siivous, koneiden vuosihuolto. Myös yrityksen graafinen suunnittelu, www-sivut (myös asiakkaiden) ja mainokset.
                         </p>
                         <ul class="list-group list-group-flush">
                             <li class=" list-group item text-dark">
@@ -516,7 +511,7 @@
                         <p>Vastoin yleistä käsitystä Lorem Ipsum ei ole vain satunnaista tekstiä. Sen juuret ovat
                             peräisin klassisesta latinalaiskirjallisuudesta.</p>
                         <div class="col-auto social-icons">
-                            <a href="https://www.instagram.com/joacim"><i class='bx bxl-instagram'></i></a>
+                            <a href="https://www.instagram.com/joacimronn"><i class='bx bxl-instagram'></i></a>
                             <a href="https://www.linkedin.com/in/joacim-r%C3%B6nn-8ab2251/"><i
                                     class='bx bxl-linkedin'></i></a>
                         </div>
