--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-
-
     <title>Joacim Rönn</title>
 </head>
 
@@ -169,16 +167,33 @@
                         <p class="mx-auto">Hei, tässä minun työhistoria sekä opiskeluni. Keltaisella taustalla olevat ovat yrityksiä, joille teen edelleen keikkaluontoisesti töitä.</p>
                     </div>
                 </div>
-            </div>
+            </div>  
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
                     <div class="service bg-success">
+                        <img src="/img/esedu.jpg" class="rounded-circle shadow mb-3" alt="Esedu">
+                        <h5>Esedu Oy</h5>
+                        <p class="text-dark">Toimin sisällöntuotannon kouluttajana Digimuuntamon opiskelijoille. HTML/CSS, kuvankäsittely ja videotuotanto. Toimin myös muiden kouluttajien apuna.</p>
+                        <ul class="list-group list-group-flush">
+                            <li class=" list-group item text-dark">
+                                <i class="bi bi-tools mx-1"> Kouluttaja 2022 -</i>
+                            </li>
+                            <li class="list-group item">
+                                <a href="https://esedu.fi">
+                                    <i class="bi bi-globe mx-1"> Esedu</i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service">
                         <img src="/img/megaman.jpg" class="rounded-circle shadow mb-3" alt="Megaman">
                         <h5>Megaman Oy</h5>
                         <p class="text-dark">IT-huollon vastuuhenkilö, asiakaspalvelu, puhelintuki, etätuki, tietokonehuolto, komponenttien vaihto, virusten siivous, koneiden vuosihuolto. Myös yrityksen graafinen suunnittelu, www-sivut (myös asiakkaiden) ja mainokset. </p>
                         <ul class="list-group list-group-flush">
                             <li class=" list-group item text-dark">
-                                <i class="bi bi-tools mx-1"> Multiasentaja 2019 -</i>
+                                <i class="bi bi-tools mx-1"> Multiasentaja 2019 - 2022</i>
                             </li>
                             <li class="list-group item">
                                 <a href="https://megaman.pro">
